--- a/public/main.css
+++ b/public/main.css
@@ -496,6 +496,7 @@ select:-webkit-autofill {
   background: linear-gradient(145deg, #ec5454, #ef6b6b);
   background: -webkit-gradient(145deg, #ec5454, #ef6b6b);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   padding-right: 10px;
   margin-left: 10%;
@@ -555,8 +556,7 @@ select:-webkit-autofill {
 
 #skills-section {
   margin-top: -1px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #151515), color-stop(50%, #f1f1f1));
-  background: linear-gradient(to bottom, #151515 50%, #f1f1f1 50%);
+  background: url("./bg/topography.png");
 }
 
 #skills-section .bg-clipper {
@@ -730,6 +730,65 @@ select:-webkit-autofill {
 
 #portfolio-section {
   background: url("./bg/cartographer.png");
+  /*
+	#maral {
+		li:hover {
+			transform: scale(1.3);
+			background-color: transparent;
+			color: color(maral);
+		}
+		h1 {
+			background: linear-gradient(145deg, color(maral), color(maral-light));
+			-webkit-background-clip: text;
+			background-clip: text;
+			-webkit-text-fill-color: transparent;
+			padding-right: 10px;
+		}
+
+		b a,
+		b,
+		a {
+			color: color(maral);
+		}
+
+		.action-link {
+			background-image: linear-gradient(90deg, color(maral-light), color(maral)) !important;
+
+			&:before {
+				background-image: linear-gradient(270deg, color(maral-light), color(maral)) !important;
+			}
+		}
+	}
+
+	#xs-url {
+		li:hover {
+			transform: scale(1.3);
+			background-color: transparent;
+			color: color(xs-url);
+		}
+		h1 {
+			background: linear-gradient(145deg, color(xs-url), color(xs-url-light));
+			-webkit-background-clip: text;
+			background-clip: text;
+			-webkit-text-fill-color: transparent;
+			padding-right: 10px;
+		}
+
+		b a,
+		b,
+		a {
+			color: color(xs-url);
+		}
+
+		.action-link {
+			background-image: linear-gradient(90deg, color(xs-url-light), color(xs-url)) !important;
+
+			&:before {
+				background-image: linear-gradient(270deg, color(xs-url-light), color(xs-url)) !important;
+			}
+		}
+	}
+	*/
 }
 
 #portfolio-section h1 {
@@ -876,66 +935,6 @@ select:-webkit-autofill {
 
 #portfolio-section .portfolio-item .portfolio-info:first-child {
   margin-top: 1rem;
-}
-
-#portfolio-section #maral li:hover {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-  background-color: transparent;
-  color: #233bde;
-}
-
-#portfolio-section #maral h1 {
-  background: linear-gradient(145deg, #233bde, #4f63e5);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  padding-right: 10px;
-}
-
-#portfolio-section #maral b a,
-#portfolio-section #maral b,
-#portfolio-section #maral a {
-  color: #233bde;
-}
-
-#portfolio-section #maral .action-link {
-  background-image: -webkit-gradient(linear, left top, right top, from(#4f63e5), to(#233bde)) !important;
-  background-image: linear-gradient(90deg, #4f63e5, #233bde) !important;
-}
-
-#portfolio-section #maral .action-link:before {
-  background-image: -webkit-gradient(linear, right top, left top, from(#4f63e5), to(#233bde)) !important;
-  background-image: linear-gradient(270deg, #4f63e5, #233bde) !important;
-}
-
-#portfolio-section #xs-url li:hover {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-  background-color: transparent;
-  color: #08ad5f;
-}
-
-#portfolio-section #xs-url h1 {
-  background: linear-gradient(145deg, #08ad5f, #0ade7a);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  padding-right: 10px;
-}
-
-#portfolio-section #xs-url b a,
-#portfolio-section #xs-url b,
-#portfolio-section #xs-url a {
-  color: #08ad5f;
-}
-
-#portfolio-section #xs-url .action-link {
-  background-image: -webkit-gradient(linear, left top, right top, from(#0ade7a), to(#08ad5f)) !important;
-  background-image: linear-gradient(90deg, #0ade7a, #08ad5f) !important;
-}
-
-#portfolio-section #xs-url .action-link:before {
-  background-image: -webkit-gradient(linear, right top, left top, from(#0ade7a), to(#08ad5f)) !important;
-  background-image: linear-gradient(270deg, #0ade7a, #08ad5f) !important;
 }
 
 /* KEYFRAMES & ANIMATION CLASSES */
@@ -1509,6 +1508,9 @@ select:-webkit-autofill {
 }
 
 @media (max-width: 768px) {
+  #fp-nav.fp-right {
+    right: -5px !important;
+  }
   .hero .hero-title {
     margin-left: 5%;
     margin-top: -15px;
@@ -1528,6 +1530,7 @@ select:-webkit-autofill {
     right: 10px !important;
   }
   #portfolio-section .portfolio-thumbnail-wrapper {
+    margin-top: 1.5em;
     -ms-flex: 0 0 100% !important;
     -webkit-box-flex: 0 !important;
             flex: 0 0 100% !important;
