--- a/public/main.css
+++ b/public/main.css
@@ -99,11 +99,11 @@ html[data-theme="dark"] {
 
 a,
 b {
-  color: #e72626;
+  color: #0c7d60;
 }
 
 a:hover {
-  color: #f18282;
+  color: #14dba8;
 }
 
 body,
@@ -124,8 +124,8 @@ body {
   margin: 5px auto 0 auto;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  background-image: -webkit-gradient(linear, right top, left top, from(#ec5454), to(#f18282));
-  background-image: linear-gradient(270deg, #ec5454, #f18282);
+  background-image: -webkit-gradient(linear, right top, left top, from(#10ac84), to(#14dba8));
+  background-image: linear-gradient(270deg, #10ac84, #14dba8);
   z-index: 6;
   text-decoration: none;
   color: #f1f1f1 !important;
@@ -156,8 +156,8 @@ body {
   display: block;
   padding: 10px 0;
   border: none !important;
-  background-image: -webkit-gradient(linear, left top, right top, from(#ec5454), to(#e72626));
-  background-image: linear-gradient(90deg, #ec5454, #e72626);
+  background-image: -webkit-gradient(linear, left top, right top, from(#10ac84), to(#0c7d60));
+  background-image: linear-gradient(90deg, #10ac84, #0c7d60);
   color: #f1f1f1 !important;
   outline: none;
   cursor: pointer;
@@ -188,8 +188,8 @@ body {
   display: block;
   padding: 10px 0;
   border: none !important;
-  background: -webkit-gradient(linear, left top, right top, from(#ec5454), to(#e72626));
-  background: linear-gradient(90deg, #ec5454, #e72626);
+  background: -webkit-gradient(linear, left top, right top, from(#10ac84), to(#0c7d60));
+  background: linear-gradient(90deg, #10ac84, #0c7d60);
   color: #f1f1f1 !important;
   outline: none;
   cursor: pointer;
@@ -207,8 +207,8 @@ body {
 
 .action-link:before {
   border-radius: inherit;
-  background-image: -webkit-gradient(linear, right top, left top, from(#ec5454), to(#f18282));
-  background-image: linear-gradient(270deg, #ec5454, #f18282);
+  background-image: -webkit-gradient(linear, right top, left top, from(#10ac84), to(#14dba8));
+  background-image: linear-gradient(270deg, #10ac84, #14dba8);
   content: "";
   display: block;
   height: 100%;
@@ -263,7 +263,7 @@ body {
 .fp-controlArrow.fp-next:hover {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
-  border-color: transparent transparent transparent #ec5454;
+  border-color: transparent transparent transparent #10ac84;
   opacity: 0.9;
 }
 
@@ -277,7 +277,7 @@ body {
 .fp-controlArrow.fp-prev:hover {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
-  border-color: transparent #ec5454 transparent transparent;
+  border-color: transparent #10ac84 transparent transparent;
   opacity: 0.9;
 }
 
@@ -287,7 +287,7 @@ input[type="password"],
 textarea {
   background-color: #f1f1f1 !important;
   font-weight: bold;
-  color: #ec5454;
+  color: #10ac84;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border: 2px solid transparent !important;
@@ -319,7 +319,7 @@ select:-webkit-autofill:focus {
 input:-webkit-autofill,
 textarea:-webkit-autofill,
 select:-webkit-autofill {
-  -webkit-text-fill-color: #ec5454 !important;
+  -webkit-text-fill-color: #10ac84 !important;
   border: 2px solid transparent !important;
   box-shadow: 0 0 0 30px #e6e6e6 inset !important;
   -webkit-box-shadow: 0 0 0 30px #e6e6e6 inset !important;
@@ -347,7 +347,7 @@ select:-webkit-autofill {
 }
 
 .navbar-brand:hover {
-  color: #ec5454 !important;
+  color: #10ac84 !important;
 }
 
 .navbar-dark {
@@ -378,7 +378,7 @@ select:-webkit-autofill {
 }
 
 .navbar-nav li a i:hover {
-  color: #ec5454;
+  color: #10ac84;
 }
 
 /* END NAVBAR */
@@ -395,6 +395,20 @@ select:-webkit-autofill {
 
 .main-section.even {
   background-color: #f1f1f1;
+}
+
+h1,
+h2,
+h3,
+.action-link,
+.action-btn,
+.wrapper-icon,
+.skills-text,
+.skills-used-large ul li {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .hero {
@@ -436,13 +450,13 @@ select:-webkit-autofill {
 
 .hero h3 b {
   font-size: 1.25em;
-  color: #f18282;
+  color: #14dba8;
 }
 
 .hero h3 i {
   font-size: 1.9em;
   font-style: normal;
-  color: #ec5454;
+  color: #10ac84;
 }
 
 .hero .portfolio-link {
@@ -493,8 +507,8 @@ select:-webkit-autofill {
 .hero-title {
   /*font-weight: bold;*/
   font-family: "Noir" !important;
-  background: linear-gradient(145deg, #ec5454, #ef6b6b);
-  background: -webkit-gradient(145deg, #ec5454, #ef6b6b);
+  background: linear-gradient(145deg, #10ac84, #12c396);
+  background: -webkit-gradient(145deg, #10ac84, #12c396);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -527,7 +541,7 @@ select:-webkit-autofill {
 }
 
 .main-section.even .hero-title {
-  color: #ec5454;
+  color: #10ac84;
 }
 
 .hero-secondary-title {
@@ -580,14 +594,14 @@ select:-webkit-autofill {
 
 #skills-section .skills-section h2 {
   font-size: 2rem;
-  color: #f18282;
+  color: #14dba8;
   opacity: 0.95;
   margin-left: 3.5em;
 }
 
 #skills-section .skills-text {
   text-align: center;
-  color: #f18282;
+  color: #14dba8;
   opacity: 0.75;
   font-size: 2em;
   -webkit-transform: rotate(90deg);
@@ -725,70 +739,11 @@ select:-webkit-autofill {
 }
 
 #contact-section .contact-footer li i {
-  color: #ec5454;
+  color: #10ac84;
 }
 
 #portfolio-section {
   background: url("./bg/cartographer.png");
-  /*
-	#maral {
-		li:hover {
-			transform: scale(1.3);
-			background-color: transparent;
-			color: color(maral);
-		}
-		h1 {
-			background: linear-gradient(145deg, color(maral), color(maral-light));
-			-webkit-background-clip: text;
-			background-clip: text;
-			-webkit-text-fill-color: transparent;
-			padding-right: 10px;
-		}
-
-		b a,
-		b,
-		a {
-			color: color(maral);
-		}
-
-		.action-link {
-			background-image: linear-gradient(90deg, color(maral-light), color(maral)) !important;
-
-			&:before {
-				background-image: linear-gradient(270deg, color(maral-light), color(maral)) !important;
-			}
-		}
-	}
-
-	#xs-url {
-		li:hover {
-			transform: scale(1.3);
-			background-color: transparent;
-			color: color(xs-url);
-		}
-		h1 {
-			background: linear-gradient(145deg, color(xs-url), color(xs-url-light));
-			-webkit-background-clip: text;
-			background-clip: text;
-			-webkit-text-fill-color: transparent;
-			padding-right: 10px;
-		}
-
-		b a,
-		b,
-		a {
-			color: color(xs-url);
-		}
-
-		.action-link {
-			background-image: linear-gradient(90deg, color(xs-url-light), color(xs-url)) !important;
-
-			&:before {
-				background-image: linear-gradient(270deg, color(xs-url-light), color(xs-url)) !important;
-			}
-		}
-	}
-	*/
 }
 
 #portfolio-section h1 {
@@ -798,7 +753,7 @@ select:-webkit-autofill {
 }
 
 #portfolio-section a {
-  color: #ec5454;
+  color: #10ac84;
   text-decoration: none;
 }
 
@@ -895,7 +850,7 @@ select:-webkit-autofill {
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
   background-color: transparent;
-  color: #ec5454;
+  color: #10ac84;
 }
 
 #portfolio-section .portfolio-item p {
@@ -935,6 +890,68 @@ select:-webkit-autofill {
 
 #portfolio-section .portfolio-item .portfolio-info:first-child {
   margin-top: 1rem;
+}
+
+#portfolio-section #maral li:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  background-color: transparent;
+  color: #233bde;
+}
+
+#portfolio-section #maral h1 {
+  background: linear-gradient(145deg, #233bde, #4f63e5);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding-right: 10px;
+}
+
+#portfolio-section #maral b a,
+#portfolio-section #maral b,
+#portfolio-section #maral a {
+  color: #233bde;
+}
+
+#portfolio-section #maral .action-link {
+  background-image: -webkit-gradient(linear, left top, right top, from(#4f63e5), to(#233bde)) !important;
+  background-image: linear-gradient(90deg, #4f63e5, #233bde) !important;
+}
+
+#portfolio-section #maral .action-link:before {
+  background-image: -webkit-gradient(linear, right top, left top, from(#4f63e5), to(#233bde)) !important;
+  background-image: linear-gradient(270deg, #4f63e5, #233bde) !important;
+}
+
+#portfolio-section #xs-url li:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  background-color: transparent;
+  color: #08ad5f;
+}
+
+#portfolio-section #xs-url h1 {
+  background: linear-gradient(145deg, #08ad5f, #0ade7a);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding-right: 10px;
+}
+
+#portfolio-section #xs-url b a,
+#portfolio-section #xs-url b,
+#portfolio-section #xs-url a {
+  color: #08ad5f;
+}
+
+#portfolio-section #xs-url .action-link {
+  background-image: -webkit-gradient(linear, left top, right top, from(#0ade7a), to(#08ad5f)) !important;
+  background-image: linear-gradient(90deg, #0ade7a, #08ad5f) !important;
+}
+
+#portfolio-section #xs-url .action-link:before {
+  background-image: -webkit-gradient(linear, right top, left top, from(#0ade7a), to(#08ad5f)) !important;
+  background-image: linear-gradient(270deg, #0ade7a, #08ad5f) !important;
 }
 
 /* KEYFRAMES & ANIMATION CLASSES */
