--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,7 +122,7 @@
 
 	<section class="section main-section fp-auto-height-responsive" id="skills-section" data-anchor="skills">
 		<div class="bg-clipper">
-			<h1 class="hero-title mt-2 mb-0" data-animation="dropDownAnim">Skills</h1>
+			<h1 class="hero-title pt-5 mb-0" data-animation="dropDownAnim">Skills</h1>
 
 			<div class="skill-content col-md-10 p-3">
 				<p class="skills-text">{ Non-exhaustive list }</p>
@@ -247,7 +247,7 @@
 
 	<section class="section main-section even fp-auto-height-responsive" id="contact-section" data-anchor="contact">
 		<div class="bg-clipper">
-			<h1 class="hero-title mt-2" data-animation="dropDownAnim">Contact</h1>
+			<h1 class="hero-title pt-5" data-animation="dropDownAnim">Contact</h1>
 
 			<form class="col-md-6 col-sm-8 offset-sm-2" id="contact-form" method="POST" data-animation="formAnim" action="/api/contact/">
 				<div class="row">
