--- a/public/main.css
+++ b/public/main.css
@@ -7,10 +7,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
-section {
-  margin-top: -1px !important;
-}
-
 .dark-mode {
   -webkit-filter: invert(1) hue-rotate(180deg);
           filter: invert(1) hue-rotate(180deg);
@@ -572,12 +568,16 @@ h3,
   }
 }
 
+section {
+  margin-top: -1px !important;
+}
+
 #skills-section {
-  margin-top: -1px;
   background: url("./bg/topography.png");
 }
 
 #skills-section .bg-clipper {
+  margin-top: -1px;
   height: 102vh;
   background: url("./bg/cartographer.png");
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
@@ -677,6 +677,7 @@ h3,
 }
 
 #contact-section {
+  height: 100.1vh !important;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #f1f1f1), color-stop(50%, #151515));
   background: linear-gradient(to bottom, #f1f1f1 50%, #151515 50%);
 }
