added proper landscape picture for portfolio

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,8 +36,8 @@
 			<div class="slide" id="maral">
 				<div class="portfolio-item row">
 					<div class="portfolio-thumbnail-wrapper p-0">
-						<a href="https://www.maral.fr" target="_blank" class="iphoneAnim iphoneVert"><img src="/img/iphone7.png" draggable="false" class="iphone-class" /></a>
-						<a href="https://www.maral.fr" target="_blank" class="iphoneSide"><img src="/img/iphone7side.png" draggable="false" class="iphone-class" /></a>
+						<a href="https://www.maral.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"><img src="/img/iphone7.png" draggable="false" class="iphone-class" /></a>
+						<a href="https://www.maral.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"><img src="/img/iphone7side.png" draggable="false" class="iphone-class" /></a>
 					</div>
 
 					<div class="portfolio-info">
@@ -73,8 +73,8 @@
 			<div class="slide" id="xs-url">
 				<div class="portfolio-item row">
 					<div class="portfolio-thumbnail-wrapper p-0">
-						<a href="http://www.xs-url.fr" target="_blank" class="iphoneAnim iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class" /></a>
-						<a href="http://www.xs-url.fr" target="_blank" class="iphoneSide"><img src="/img/iphone7urlside.png" draggable="false" class="iphone-class" /></a>
+						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class" /></a>
+						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"><img src="/img/iphone7urlside.png" draggable="false" class="iphone-class" /></a>
 					</div>
 
 					<div class="portfolio-info">
@@ -105,8 +105,8 @@
 			<div class="slide">
 				<div class="portfolio-item row">
 					<div class="portfolio-thumbnail-wrapper p-0">
-						<!--	<a href="http://www.xs-url.fr" target="_blank" class="iphoneAnim iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class" /></a>
-						<a href="http://www.xs-url.fr" target="_blank" class="iphoneSide"><img src="/img/iphone7urlside.png" draggable="false" class="iphone-class" /></a>-->
+						<!--	<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class=" iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class" /></a>
+						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"><img src="/img/iphone7urlside.png" draggable="false" class="iphone-class" /></a>-->
 					</div>
 
 					<div class="portfolio-info">
