tweaking fullpage js scrolling

--- a/public/main.scss
+++ b/public/main.scss
@@ -1033,7 +1033,7 @@ section {
 	}
 }
 
-.contactSvgAnim {
+.contactSvgAnimx {
 	opacity: 0;
 	animation: contactSvgAnim 1s 1 0.2s ease forwards;
 }
