--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
 			<div class="slide" id="maral">
 				<div class="portfolio-item row">
 					<div class="portfolio-thumbnail-wrapper p-0">
-						<a href="https://www.maral.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"><img src="/img/iphone7.png" draggable="false" class="iphone-class" /></a>
+						<a href="https://www.maral.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"><img src="/img/iphone7.png" draggable="false" class="iphone-class vertical" /></a>
 						<a href="https://www.maral.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"><img src="/img/iphone7side.png" draggable="false" class="iphone-class" /></a>
 					</div>
 
@@ -52,7 +52,7 @@
 							I used <b><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></b> for the main layout of the front-end design, although most of the <b>CSS</b> has been custom-made to the
 							client's taste. The <b>NodeJS</b> back-end is built around a <b>custom API</b> to manage requests and orders seamlessly.
 						</p>
-						<p>Includes an admin interface that allows the client to manage the content of the website and the orders very easily, with just a few clicks.</p>
+						<p class="last">Includes an admin interface that allows the client to manage the content of the website and the orders very easily, with just a few clicks.</p>
 
 						<div class="skills-used-large">
 							<ul>
@@ -73,7 +73,7 @@
 			<div class="slide" id="xs-url">
 				<div class="portfolio-item row">
 					<div class="portfolio-thumbnail-wrapper p-0">
-						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class" /></a>
+						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class vertical" /></a>
 						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"><img src="/img/iphone7urlside.png" draggable="false" class="iphone-class" /></a>
 					</div>
 
@@ -85,7 +85,7 @@
 							For this small scale project I did not use any CSS templating service, only <b>custom CSS</b>. Regarding the back-end, I used <b>NodeJS</b> to create an <b>API</b> to generate shorter
 							URLs and access them easily.
 						</p>
-						<p>For your eye's sake I implemented both a <b>light-mode</b> and a <b>dark-mode</b> that you can toggle whenever you like it best!</p>
+						<p class="last">For your eye's sake I implemented both a <b>light-mode</b> and a <b>dark-mode</b> that you can toggle whenever you like it best!</p>
 
 						<div class="skills-used-large">
 							<ul>
@@ -128,7 +128,7 @@
 				<p class="skills-text">{ Non-exhaustive list }</p>
 				<div class="skills-section">
 					<h2>Front-end</h2>
-					<div class="skills-wrapper col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
+					<div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 skills-wrapper">
 						<h1 data-animation="leftBracketAnim">{</h1>
 						<div class="wrapper-icon">
 							<div>
@@ -174,70 +174,70 @@
 						</div>
 						<h1 data-animation="rightBracketAnim">}</h1>
 					</div>
+				</div>
 
-					<div class="skills-section">
-						<h2>Back-end</h2>
-						<div class="skills-wrapper col-lg-8 offset-lg-2 col-md-10 offset-md-1">
-							<h1 data-animation="leftBracketAnim">{</h1>
-							<div class="wrapper-icon">
-								<div>
-									<img class="skill-icon" src="/img/icons/white/nodejs_icon.png" alt="NodeJS" draggable="false" />
-								</div>
-								<label>NodeJS</label>
+				<div class="skills-section">
+					<h2>Back-end</h2>
+					<div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 skills-wrapper">
+						<h1 data-animation="leftBracketAnim">{</h1>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/white/nodejs_icon.png" alt="NodeJS" draggable="false" />
 							</div>
-							<div class="wrapper-icon">
-								<div>
-									<img class="skill-icon" src="/img/icons/white/php_icon.png" alt="PHP" draggable="false" />
-								</div>
-								<label>PHP</label>
-							</div>
-							<div class="wrapper-icon">
-								<div>
-									<img class="skill-icon" src="/img/icons/white/database_icon.png" alt="Database SQL/noSQL" draggable="false" />
-								</div>
-								<label>SQL / noSQL</label>
-							</div>
-							<div class="wrapper-icon">
-								<div>
-									<img class="skill-icon" src="/img/icons/white/api_icon.png" alt="API" draggable="false" />
-								</div>
-								<label>API</label>
-							</div>
-							<div class="wrapper-icon">
-								<div>
-									<img class="skill-icon" src="/img/icons/white/s3_icon.png" alt="S3" draggable="false" />
-								</div>
-								<label>S3</label>
-							</div>
-							<h1 data-animation="rightBracketAnim">}</h1>
+							<label>NodeJS</label>
 						</div>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/white/php_icon.png" alt="PHP" draggable="false" />
+							</div>
+							<label>PHP</label>
+						</div>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/white/database_icon.png" alt="Database SQL/noSQL" draggable="false" />
+							</div>
+							<label>SQL / noSQL</label>
+						</div>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/white/api_icon.png" alt="API" draggable="false" />
+							</div>
+							<label>API</label>
+						</div>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/white/s3_icon.png" alt="S3" draggable="false" />
+							</div>
+							<label>S3</label>
+						</div>
+						<h1 data-animation="rightBracketAnim">}</h1>
 					</div>
+				</div>
 
-					<div class="skills-section">
-						<h2>Misc</h2>
-						<div class="skills-wrapper col-lg-8 offset-lg-2">
-							<h1 data-animation="leftBracketAnim">{</h1>
-							<div class="wrapper-icon">
-								<div>
-									<img class="skill-icon" src="/img/icons/white/git_icon.png" alt="Git" draggable="false" />
-								</div>
-								<label>Git</label>
+				<div class="skills-section">
+					<h2>Misc</h2>
+					<div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 skills-wrapper">
+						<h1 data-animation="leftBracketAnim">{</h1>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/white/git_icon.png" alt="Git" draggable="false" />
 							</div>
-							<div class="wrapper-icon">
-								<div>
-									<img class="skill-icon" src="/img/icons/white/docker_icon.png" alt="Docker" draggable="false" />
-								</div>
-								<label>Docker</label>
-							</div>
-
-							<div class="wrapper-icon">
-								<div>
-									<img class="skill-icon" src="/img/icons/white/console_icon.png" alt="Shell" draggable="false" />
-								</div>
-								<label>Shell</label>
-							</div>
-							<h1 data-animation="rightBracketAnim">}</h1>
+							<label>Git</label>
 						</div>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/white/docker_icon.png" alt="Docker" draggable="false" />
+							</div>
+							<label>Docker</label>
+						</div>
+
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/white/console_icon.png" alt="Shell" draggable="false" />
+							</div>
+							<label>Shell</label>
+						</div>
+						<h1 data-animation="rightBracketAnim">}</h1>
 					</div>
 				</div>
 				<a href="#contact" class="action-link m-auto">Contact me !</a>
