--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
+		<meta property="og:image" content="https://i.imgur.com/Cn9m0ZG.png" />
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 		<title>ablin@dev</title>
 
