--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
-		<meta property="og:image" content="https://i.imgur.com/Cn9m0ZG.png" />
+
+		<meta property="og:title" content="ablin@dev" />
+		<meta name="meta image" property="og:image" content="https://i.imgur.com/Cn9m0ZG.png" />
+		<meta property="og:description" content="Web Developer Fullstack | Freelance | Ready to enhance your online activity and solve your problems" />
+		<meta property="og:url" content="https://www.ablin.dev/" />
+
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 		<title>ablin@dev</title>
 
