permanent url medatada img

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,7 +6,7 @@
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
 
 		<meta property="og:title" content="ablin@dev" />
-		<meta name="meta image" property="og:image" content="https://i.imgur.com/Cn9m0ZG.png" />
+		<meta name="meta image" property="og:image" content="/img/screencap.png" />
 		<meta property="og:description" content="Web Developer Fullstack | Freelance | Ready to enhance your online activity and solve your problems" />
 		<meta property="og:url" content="https://www.ablin.dev/" />
 
