--- a/views/index.ejs
+++ b/views/index.ejs
@@ -282,7 +282,7 @@
 			<div class="contact-footer">
 				<ul>
 					<li><i class="fas fa-phone"></i> <span>+33 6 89 89 81 98</span></li>
-					<li><span>ablin.dev@gmail.com </span><i class="fas fa-envelope"></i></li>
+					<li><span>freelance@ablin.dev </span><i class="fas fa-envelope"></i></li>
 				</ul>
 			</div>
 		</div>
