storing external assets into statics here, trying to fix csp issues

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,42 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" prefix="og: http://ogp.me/ns#">
+<html lang="en">
+	<!--prefix="og: http://ogp.me/ns#"-->
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
 
-		<meta property="og:title" content="ablin@dev" />
-		<meta name="meta image" property="og:image" content="/img/screencap.png" />
-		<meta property="og:description" content="Web Developer Fullstack | Freelance | Ready to enhance your online activity and solve your problems" />
-		<meta property="og:url" content="https://www.ablin.dev/" />
+		<meta property="title" content="ablin@dev" />
+		<meta name="meta image" property="image" content="/img/screencap.png" />
+		<meta property="description" content="Web Developer Fullstack | Freelance | Ready to enhance your online activity and solve your problems" />
+		<meta property="url" content="https://www.ablin.dev/" />
 
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 		<title>ablin@dev</title>
 
 		<!-- JQuery -->
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script type="text/javascript" src="/jQuery.min.js"></script>
 
-		<!-- Bootstrap -->
-		<link
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
-		/>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-			crossorigin="anonymous"
-		></script>
+		<!-- Bootstrap integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" -->
+		<link rel="stylesheet" href="/bootstrap.min.css" />
+		<script src="/bootstrap.min.js"></script>
 
 		<!-- fullpage-->
 		<script src="/scripts/fullpage.min.js"></script>
 		<link rel="stylesheet" href="/fullpage.min.css" />
 
-		<script src="https://cdn.jsdelivr.net/npm/lax.js"></script>
+		<!-- <script src="https://cdn.jsdelivr.net/npm/lax.js"></script> -->
 
 		<!-- FontAwesome Icons -->
-		<script src="https://kit.fontawesome.com/ba18cbd714.js"></script>
+		<script src="/fontawesome.kit.js"></script>
 
 		<script src="/scripts/core/alert.js"></script>
 		<link rel="stylesheet" href="/main.css" />
