moved xs url to first

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,38 @@
 
 	<section class="section main-section even fp-auto-height-responsive" id="portfolio-section" data-anchor="portfolio">
 		<div class="bg-clipper">
+			<div class="slide" id="xs-url">
+				<div class="portfolio-item row">
+					<div class="portfolio-thumbnail-wrapper p-0">
+						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class vertical" /></a>
+						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"><img src="/img/iphone7urlside.png" draggable="false" class="iphone-class" /></a>
+					</div>
+
+					<div class="portfolio-info">
+						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="http://www.xs-url.fr" target="_blank">Xs Url</a></h1>
+
+						<p>A straightforward and easy to use <b>URL shortener</b> service allowing users to redirect to an URL while <b>spoofing</b> its original <b>URL</b>.</p>
+						<p>
+							For this small scale project I did not use any CSS templating service, only <b>custom CSS</b>. Regarding the back-end, I used <b>NodeJS</b> to create an <b>API</b> to generate shorter
+							URLs and access them easily.
+						</p>
+						<p class="last">For your eye's sake I implemented both a <b>light-mode</b> and a <b>dark-mode</b> that you can toggle whenever you like it best!</p>
+
+						<div class="skills-used-large">
+							<ul>
+								<li>NodeJS</li>
+								<li>API</li>
+								<li>Custom CSS</li>
+								<li>Javascript</li>
+							</ul>
+							<div class="skill-call-wrapper">
+								<a href="#skills" class="action-link m-auto">Skills</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<div class="slide" id="maral">
 				<div class="portfolio-item row">
 					<div class="portfolio-thumbnail-wrapper p-0">
@@ -41,7 +73,7 @@
 					</div>
 
 					<div class="portfolio-info">
-						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="https://www.maral.fr" target="_blank">Maral.fr</a></h1>
+						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="https://www.maral.fr" target="_blank">Maral</a></h1>
 
 						<p>
 							An <b>e-commerce</b> website allowing customers to purchase paintings or replicas of these paintings using <b><a href="https://pwinty.com/" target="_blank">Pwinty API</a></b> to
@@ -70,38 +102,6 @@
 				</div>
 			</div>
 
-			<div class="slide" id="xs-url">
-				<div class="portfolio-item row">
-					<div class="portfolio-thumbnail-wrapper p-0">
-						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class vertical" /></a>
-						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"><img src="/img/iphone7urlside.png" draggable="false" class="iphone-class" /></a>
-					</div>
-
-					<div class="portfolio-info">
-						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="http://www.xs-url.fr" target="_blank">xs-url.fr</a></h1>
-
-						<p>A straightforward and easy to use <b>URL shortener</b> service allowing users to redirect to an URL while <b>spoofing</b> its original <b>URL</b>.</p>
-						<p>
-							For this small scale project I did not use any CSS templating service, only <b>custom CSS</b>. Regarding the back-end, I used <b>NodeJS</b> to create an <b>API</b> to generate shorter
-							URLs and access them easily.
-						</p>
-						<p class="last">For your eye's sake I implemented both a <b>light-mode</b> and a <b>dark-mode</b> that you can toggle whenever you like it best!</p>
-
-						<div class="skills-used-large">
-							<ul>
-								<li>NodeJS</li>
-								<li>API</li>
-								<li>Custom CSS</li>
-								<li>Javascript</li>
-							</ul>
-							<div class="skill-call-wrapper">
-								<a href="#skills" class="action-link m-auto">Skills</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
 			<div class="slide">
 				<div class="portfolio-item row">
 					<div class="portfolio-thumbnail-wrapper p-0">
@@ -111,7 +111,7 @@
 
 					<div class="portfolio-info">
 						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="http://www.xs-url.fr" target="_blank">Covid Tracker</a></h1>
-						<h2 class="text-center">Coming soon...</h2>
+						<h2 class="text-center">Coming soon..?</h2>
 
 						<div class="skills-used-large"></div>
 					</div>
