updated metadata and SEO enhancement

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 				<div class="scroll-indicator" data-animation="indicatorAnim"></div>
 			</div>
 
-			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" data-animation="freelancerAnim" draggable="false" />
+			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration For Fullstack Web Developer" data-animation="freelancerAnim" draggable="false" />
 		</div>
 	</section>
 
@@ -36,8 +36,12 @@
 			<div class="slide" id="xs-url">
 				<div class="portfolio-item row">
 					<div class="portfolio-thumbnail-wrapper p-0">
-						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class vertical" /></a>
-						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"><img src="/img/iphone7urlside.png" draggable="false" class="iphone-class" /></a>
+						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"
+							><img src="/img/iphone7url.png" alt="Xs-url Xs url shortener service screenshot" draggable="false" class="iphone-class vertical"
+						/></a>
+						<a href="http://www.xs-url.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"
+							><img src="/img/iphone7urlside.png" alt="Xs-url Xs url shortener service screenshot horizontal" draggable="false" class="iphone-class"
+						/></a>
 					</div>
 
 					<div class="portfolio-info">
@@ -68,8 +72,12 @@
 			<div class="slide" id="maral">
 				<div class="portfolio-item row">
 					<div class="portfolio-thumbnail-wrapper p-0">
-						<a href="https://www.maral.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"><img src="/img/iphone7.png" draggable="false" class="iphone-class vertical" /></a>
-						<a href="https://www.maral.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"><img src="/img/iphone7side.png" draggable="false" class="iphone-class" /></a>
+						<a href="https://www.maral.fr" target="_blank" data-animation="iphoneAnim" class="iphoneVert"
+							><img src="/img/iphone7.png" alt="Maral Art Paintings screenshot" draggable="false" class="iphone-class vertical"
+						/></a>
+						<a href="https://www.maral.fr" target="_blank" data-animation="iphoneAnim" class="iphoneSide"
+							><img src="/img/iphone7side.png" alt="Maral Art Paintings screenshot horizontal" draggable="false" class="iphone-class"
+						/></a>
 					</div>
 
 					<div class="portfolio-info">
@@ -132,7 +140,7 @@
 						<h1 data-animation="leftBracketAnim">{</h1>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/javascript_icon.png" alt="Javascript" draggable="false" />
+								<img class="skill-icon" src="/img/icons/white/javascript_icon.png" alt="Javascript JS" draggable="false" />
 							</div>
 							<label>Javascript</label>
 						</div>
@@ -144,13 +152,13 @@
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/html_icon.png" alt="HTML5" draggable="false" />
+								<img class="skill-icon" src="/img/icons/white/html_icon.png" alt="HTML5 HTML" draggable="false" />
 							</div>
 							<label>HTML5</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/css_icon.png" alt="CSS3" draggable="false" />
+								<img class="skill-icon" src="/img/icons/white/css_icon.png" alt="CSS3 CSS" draggable="false" />
 							</div>
 							<label>CSS3</label>
 						</div>
@@ -162,7 +170,7 @@
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/vuejs_icon.png" alt="Vuejs" draggable="false" />
+								<img class="skill-icon" src="/img/icons/white/vuejs_icon.png" alt="Vuejs Vue.js" draggable="false" />
 							</div>
 							<label>Vue.js</label>
 						</div>
@@ -182,7 +190,7 @@
 						<h1 data-animation="leftBracketAnim">{</h1>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/nodejs_icon.png" alt="NodeJS" draggable="false" />
+								<img class="skill-icon" src="/img/icons/white/nodejs_icon.png" alt="NodeJS Node.js" draggable="false" />
 							</div>
 							<label>NodeJS</label>
 						</div>
@@ -194,7 +202,7 @@
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/database_icon.png" alt="Database SQL/noSQL" draggable="false" />
+								<img class="skill-icon" src="/img/icons/white/database_icon.png" alt="Database SQL NoSQL" draggable="false" />
 							</div>
 							<label>SQL / noSQL</label>
 						</div>
@@ -206,7 +214,7 @@
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/s3_icon.png" alt="S3" draggable="false" />
+								<img class="skill-icon" src="/img/icons/white/s3_icon.png" alt="AWS AMAZON WEB SERVICE S3" draggable="false" />
 							</div>
 							<label>S3</label>
 						</div>
@@ -278,7 +286,7 @@
 				</div>
 			</form>
 
-			<img src="/svg/undraw_messages.svg" class="contact-svg" alt="Contact Illustration" data-animation="contactSvgAnim" draggable="false" />
+			<img src="/svg/undraw_messages.svg" class="contact-svg" alt="Message me Contact Illustration for freelance web developer fullstack" data-animation="contactSvgAnim" draggable="false" />
 			<div class="contact-footer">
 				<ul>
 					<li><i class="fas fa-phone"></i> <span>+33 6 89 89 81 98</span></li>
