--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-	<!--prefix="og: http://ogp.me/ns#"-->
+<html lang="en" prefix="og: https://ogp.me/ns#">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
+		<meta name="robots" content="index,follow" />
 
-		<meta property="title" content="ablin@dev" />
-		<meta name="meta image" property="image" content="/img/screencap.png" />
-		<meta property="description" content="Web Developer Fullstack | Freelance | Ready to enhance your online activity and solve your problems" />
-		<meta property="url" content="https://www.ablin.dev/" />
+		<meta name="application-name" content="Web Developer | ablin@dev" />
+		<meta name="author" content="Andréas Blin, Freelance Web Developer freelance@ablin.dev" />
+		<meta name="description" content="Web Developer Fullstack Freelance expert in Javascript | Ready to enhance your online activity and grow your business, open for hire" />
+		<meta
+			name="keywords"
+			content="Developer, Développeur, Web, Fullstack, Portfolio, front-end, back-end, Création de site, Website building, Website, Freelance, ablin, dev, ablin@dev, ablin.dev, ablin42, Andréas Blin, Andréas, Blin, Javascript, Node.js, React, Nodejs, Vuejs, Vue.js, xs-url.fr, xs-url, xs url, url"
+		/>
+		<meta name="url" content="https://www.ablin.dev/" />
+		<meta name="identifier-URL" content="https://www.ablin.dev/" />
+		<meta name="category" content="Web Developer Fullstack" />
+
+		<meta property="og:title" content="Web Developer | ablin@dev" />
+		<meta property="og:description" content="Web Developer Fullstack Freelance expert in Javascript | Ready to enhance your online activity and grow your business, open for hire" />
+
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.ablin.dev/" />
+		<meta property="og:image" content="/img/screencap.png" />
 
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
-		<title>ablin@dev</title>
+		<title>Web Developer | ablin@dev</title>
 
 		<!-- JQuery -->
 		<script type="text/javascript" src="/jQuery.min.js"></script>
 
-		<!-- Bootstrap integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" -->
+		<!-- Bootstrap -->
 		<link rel="stylesheet" href="/bootstrap.min.css" />
 		<script src="/bootstrap.min.js"></script>
 
