fixed image metadata

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -22,7 +22,7 @@
 
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://www.ablin.dev/" />
-		<meta property="og:image" content="/img/screencap.png" />
+		<meta property="og:image" content="https://www.ablin.dev/img/screencap.png" />
 
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 		<title>Web Developer | ablin@dev</title>
