--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,9 +6,9 @@
 		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
 		<meta name="robots" content="index,follow" />
 
-		<meta name="application-name" content="Web Developer | ablin@dev" />
-		<meta name="author" content="Andréas Blin, Freelance Web Developer freelance@ablin.dev" />
-		<meta name="description" content="Web Developer Fullstack Freelance expert in Javascript | Ready to enhance your online activity and grow your business, open for hire" />
+		<meta name="application-name" content="Fullstack Web Developer | ablin@dev" />
+		<meta name="author" content="Andréas Blin, Fullstack Web Developer freelance@ablin.dev" />
+		<meta name="description" content="Web Developer Fullstack expert in Javascript | Ready to enhance your online activity and grow your business, open for hire" />
 		<meta
 			name="keywords"
 			content="Developer, Développeur, Web, Fullstack, Portfolio, front-end, back-end, Création de site, Website building, Website, Freelance, ablin, dev, ablin@dev, ablin.dev, ablin42, Andréas Blin, Andréas, Blin, Javascript, Node.js, React, Nodejs, Vuejs, Vue.js, xs-url.fr, xs-url, xs url, url"
@@ -17,8 +17,8 @@
 		<meta name="identifier-URL" content="https://www.ablin.dev/" />
 		<meta name="category" content="Web Developer Fullstack" />
 
-		<meta property="og:title" content="Web Developer | ablin@dev" />
-		<meta property="og:description" content="Web Developer Fullstack Freelance expert in Javascript | Ready to enhance your online activity and grow your business, open for hire" />
+		<meta property="og:title" content="Fullstack Web Developer | ablin@dev" />
+		<meta property="og:description" content="Web Developer Fullstack expert in Javascript | Ready to enhance your online activity and grow your business, open for hire" />
 
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://www.ablin.dev/" />
